--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "motion-v": "^1.1.1",
+        "unplugin-vue-components": "^28.7.0",
         "vue": "^3.5.15",
         "vuetify": "^3.8.6"
     }
